--- a/index.html
+++ b/index.html
@@ -1,42 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ahmad Shwan | Software Developer</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Ahmad Code - Full-stack software developer. From vision to application." />
+  <title>Ahmad Code | From Vision to Application</title>
 
-    <!-- ✅ Tailwind CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- ✅ Favicon -->
+  <link rel="icon" type="image/png" href="/logo.png" />
 
-<link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-/>
+  <!-- ✅ Tailwind CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
 
-<style>
-  html, body {
-  overflow-x: hidden;
+  <!-- ✅ Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
-}
-
-
-</style>
-    <!-- ✅ Add a custom theme (optional) -->
-    <script>
-      tailwind.config = {
-        darkMode: 'class',
-        theme: {
-          extend: {
-            colors: {
-              primary: '#00FFAB',
-              background: '#0f172a',
-            },
+  <!-- ✅ Custom Tailwind Theme -->
+  <script>
+    tailwind.config = {
+      darkMode: 'class',
+      theme: {
+        extend: {
+          colors: {
+            primary: '#00FFAB',
+            background: '#0f172a',
           },
         },
-      };
-    </script>
-  </head>
+      },
+    };
+  </script>
+
+  <style>
+    html, body {
+      overflow-x: hidden;
+    }
+  </style>
+</head>
+
   <body class="bg-background text-white">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
