adding some searchengine easy

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Ahmad Code - Full-stack software developer. From vision to application." />
+<meta name="keywords" content="Ahmad Code, Full Stack Developer, Vue Developer, Laravel Developer, Flutter, AI Developer, Kurdish Developer, ahmadcode.tech">
+<meta name="author" content="Ahmad Shwan">
+<meta property="og:title" content="Ahmad Code | From Vision to Application" />
+<meta property="og:description" content="Portfolio of Ahmad Shwan, full-stack software engineer and AI developer." />
+<meta property="og:url" content="https://ahmadcode.tech" />
+<meta property="og:image" content="https://ahmadcode.tech/logo.png" />
+<meta name="robots" content="index, follow" />
+
   <title>Ahmad Code | From Vision to Application</title>
 
   <!-- ✅ Favicon -->
