--- a/index.html
+++ b/index.html
@@ -15,13 +15,34 @@
   <title>Ahmad Code | From Vision to Application</title>
 
   <!-- ✅ Favicon -->
-  <link rel="icon" type="image/png" href="/logo.png" />
+<link rel="preload" as="image" href="/logo.png">
 
   <!-- ✅ Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- ✅ Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+
+  
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Ahmad Shwan",
+  "url": "https://ahmadcode.tech",
+  "image": "https://ahmadcode.tech/logo.png",
+  "jobTitle": "Full-Stack Software Developer",
+  "sameAs": [
+    "https://github.com/AMAS-39",
+    "https://www.linkedin.com/in/ahmad-shwan-b304b527b"
+  ],
+  "worksFor": {
+    "@type": "Organization",
+    "name": "Ahmad Code"
+  }
+}
+</script>
+
 
   <!-- ✅ Custom Tailwind Theme -->
   <script>
