adding some security

--- a/index.html
+++ b/index.html
@@ -11,11 +11,17 @@
 <meta property="og:url" content="https://ahmadcode.tech" />
 <meta property="og:image" content="https://ahmadcode.tech/logo.png" />
 <meta name="robots" content="index, follow" />
-
-  <title>Ahmad Code | From Vision to Application</title>
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Ahmad Code | From Vision to Application" />
+<meta name="twitter:description" content="Portfolio of Ahmad Shwan, full-stack software engineer and AI developer." />
+<meta name="twitter:image" content="https://ahmadcode.tech/logo.png" />
+<meta name="title" content="Ahmad Code | From Vision to Application" />
+<meta http-equiv="Content-Language" content="en">
+<link rel="canonical" href="https://ahmadcode.tech/" />
 
   <!-- ✅ Favicon -->
 <link rel="preload" as="image" href="/logo.png">
+<link rel="icon" type="image/png" href="/logo.png" />
 
   <!-- ✅ Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -41,6 +47,17 @@
     "name": "Ahmad Code"
   }
 }
+</script>
+
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3F03MRLDDL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3F03MRLDDL');
 </script>
 
 
