update the data

--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
   <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Ahmad Code - Full-stack software developer. From vision to application." />
-<meta name="keywords" content="Ahmad Code, Full Stack Developer, Vue Developer, Laravel Developer, Flutter, AI Developer, Kurdish Developer, ahmadcode.tech">
+  <meta name="description" content="Ahmad Shwan - AI & Full-Stack Software Engineer. IEEE Best Paper Award Winner. Building intelligent mobile & web systems with Flutter, Vue.js, and AI - with a strong focus on Kurdish language technology." />
+<meta name="keywords" content="Ahmad Shwan, AI Engineer, Full Stack Developer, Vue Developer, Laravel Developer, Flutter, AI Developer, Kurdish Developer, IEEE ETECOM, Computer Vision, NLP, ahmadcode.tech">
 <meta name="author" content="Ahmad Shwan">
-<meta property="og:title" content="Ahmad Code | From Vision to Application" />
-<meta property="og:description" content="Portfolio of Ahmad Shwan, full-stack software engineer and AI developer." />
+<meta property="og:title" content="Ahmad Shwan | AI & Full-Stack Software Engineer" />
+<meta property="og:description" content="IEEE Best Paper Award Winner. Building intelligent mobile & web systems with Flutter, Vue.js, and AI - with a strong focus on Kurdish language technology." />
 <meta property="og:url" content="https://ahmadcode.tech" />
 <meta property="og:image" content="https://ahmadcode.tech/logo.png" />
 <meta name="robots" content="index, follow" />
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Ahmad Code | From Vision to Application" />
-<meta name="twitter:description" content="Portfolio of Ahmad Shwan, full-stack software engineer and AI developer." />
+<meta name="twitter:title" content="Ahmad Shwan | AI & Full-Stack Software Engineer" />
+<meta name="twitter:description" content="IEEE Best Paper Award Winner. Building intelligent mobile & web systems with Flutter, Vue.js, and AI." />
 <meta name="twitter:image" content="https://ahmadcode.tech/logo.png" />
-<meta name="title" content="Ahmad Code | From Vision to Application" />
+<meta name="title" content="Ahmad Shwan | AI & Full-Stack Software Engineer" />
 <meta http-equiv="Content-Language" content="en">
 <link rel="canonical" href="https://ahmadcode.tech/" />
 
@@ -37,7 +37,7 @@
   "name": "Ahmad Shwan",
   "url": "https://ahmadcode.tech",
   "image": "https://ahmadcode.tech/logo.png",
-  "jobTitle": "Full-Stack Software Developer",
+  "jobTitle": "AI & Full-Stack Software Engineer",
   "sameAs": [
     "https://github.com/AMAS-39",
     "https://www.linkedin.com/in/ahmad-shwan-b304b527b"
